--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,12 @@
             android:layout_height="50dp"
             android:text="Simpan Anotasi"/>
 
+        <!--<Button-->
+            <!--android:id="@+id/btnZoom"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:text="ZOOM TO"/>-->
+
         <TextView
             android:id="@+id/XY1"
             android:layout_width="match_parent"
@@ -106,8 +112,8 @@
         android:orientation="vertical">
 
         <!--<ImageView-->
-        <!--<com.demeg.anotasiline.MultiTouch.TouchImageView-->
-        <com.demeg.anotasiline.ImageViewNew.GestureImageView
+        <!--<com.demeg.anotasiline.ImageViewNew.GestureImageView-->
+        <com.demeg.anotasiline.TouchImageViewNew.TouchImageView
             android:id="@+id/gambar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
